tests/expectations/parser/program/bidi_comment_fail.out
Error [EPAR0370051]: Unicode bidi override code point encountered.
    --> test:4:16
     |
   4 |         // 202E‮<-here
     |                ^^^
